--- a/src/components/intro.stories.mdx
+++ b/src/components/intro.stories.mdx
@@ -1,7 +1,14 @@
 import { Meta } from '@storybook/addon-docs/blocks';
+import { DEFAULT_VIEWPORT } from '@storybook/addon-viewport';
+
 
 <Meta
   title='Intro'
+  parameters={{
+    viewport: {
+      defaultViewport: DEFAULT_VIEWPORT
+    },
+  }}
 />
 
 # Intro
