--- a/src/components/intro.stories.mdx
+++ b/src/components/intro.stories.mdx
@@ -1,12 +1,11 @@
-import { Meta } from '@storybook/addon-docs/blocks';
-import { DEFAULT_VIEWPORT } from '@storybook/addon-viewport';
-
+import { Meta } from "@storybook/addon-docs/blocks";
+import { DEFAULT_VIEWPORT } from "@storybook/addon-viewport";
 
 <Meta
   title='Intro'
   parameters={{
     viewport: {
-      defaultViewport: DEFAULT_VIEWPORT
+      defaultViewport: DEFAULT_VIEWPORT,
     },
   }}
 />
